--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,88 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="login_register.LoginFragment">
+        <!--android:background="@drawable/img_background"-->
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-            tools:context="login_register.LoginFragment"
-            android:background="@drawable/img_background">
+            android:layout_height="wrap_content"
+            android:focusableInTouchMode="true">
 
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:gravity="center_horizontal"
-                      android:focusableInTouchMode="true"
-                      android:orientation="vertical">
-
-                <ImageView android:layout_width="200dp"
-                           android:layout_height="wrap_content"
-                           android:adjustViewBounds="true"
-                           android:layout_marginTop="100dp"
-                           android:src="@drawable/img_logo"/>
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="250dp"
+                    android:layout_height="250dp"
+                    android:layout_marginTop="40dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/img_logo"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
+                    android:id="@+id/textView15"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:text="@string/app_name"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="32dp"
+                    android:text="Witaj"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                     android:textColor="#000"
-                    android:textSize="30sp" />
-                
-                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
-                                                                       android:layout_height="wrap_content"
-                                                                       android:hint="@string/login_hint"
-                                                                       app:boxBackgroundColor="#F8E9FD"
-                                                                       android:layout_marginTop="50dp"
-                                                                       android:layout_marginStart="40dp"
-                                                                       android:layout_marginEnd="40dp">
+                    android:textSize="30sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/username_login"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:alpha="0.7"
-                            android:backgroundTint="#4CAF50" />
-                </com.google.android.material.textfield.TextInputLayout>
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:breakStrategy="balanced"
+                    android:paddingLeft="8dp"
+                    android:text="Posiadanie konta w naszej aplikacji pozwala na wykorzystanie wszystkich jej funkcji"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
-                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
-                                                                       android:layout_height="wrap_content"
-                                                                       android:hint="@string/password_hint"
-                                                                       app:boxBackgroundColor="#F8E9FD"
-                                                                       android:layout_marginTop="10dp"
-                                                                       android:layout_marginStart="40dp"
-                                                                       android:layout_marginEnd="40dp">
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/button_login"
+                    android:layout_width="0dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="64dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="64dp"
+                    android:backgroundTint="#4CAF50"
+                    android:text="Stwórz konto"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    app:cornerRadius="15dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/password_login"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:alpha="0.7"
-                            android:backgroundTint="#4CAF50"
-                            android:inputType="textPassword" />
-                </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/button_register"
+                    android:layout_width="0dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="64dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="64dp"
+                    android:backgroundTint="#99E693"
+                    android:text="Zaloguj się"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textColor="#4CAF50"
+                    app:cornerRadius="15dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/button_login" />
 
-                <RelativeLayout android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="36dp">
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/button_login_no_acc"
+                    android:layout_width="0dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="64dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="64dp"
+                    android:backgroundTint="#99E693"
+                    android:text="Kontynuuj bez logowania"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textColor="#4CAF50"
+                    app:cornerRadius="15dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/button_register" />
 
-                        <com.google.android.material.button.MaterialButton
-                            android:id="@+id/button_login"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginEnd="40dp"
-                            android:backgroundTint="#4CAF50"
-                            android:text="@string/login_button" />
+                <TextView
+                    android:id="@+id/textView16"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:text="Logując się akceptujesz "
+                    app:layout_constraintBaseline_toBaselineOf="@+id/button7"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-                        <com.google.android.material.button.MaterialButton
-                            android:id="@+id/button_register"
-                            style="@style/Widget.MaterialComponents.Button.TextButton"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="40dp"
-                            android:layout_toLeftOf="@id/button_login"
-                            android:text="@string/register_button"
-                            android:textColor="#4CAF50" />
-                </RelativeLayout>
+                <Button
+                    android:id="@+id/button7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="8dp"
+                    android:backgroundTint="@android:color/transparent"
+                    android:outlineAmbientShadowColor="#FFFFFF"
+                    android:outlineProvider="none"
+                    android:text="Regulamin i Politykę Prywatności"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="#4CAF50"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/textView16"
+                    app:layout_constraintTop_toBottomOf="@+id/button_login_no_acc" />
 
 
-        </LinearLayout>
-</ScrollView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
